--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.13.12",
     "react-query-devtools": "^2.6.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
